--- a/api/PetstoreApiTest/pom.xml
+++ b/api/PetstoreApiTest/pom.xml
@@ -139,6 +139,11 @@
             <artifactId>assertj-core</artifactId>
             <version>3.27.6</version>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-assertj</artifactId>
+            <version>2.32.0</version>
+        </dependency>
     </dependencies>
 
 </project>
