--- a/ui/UiTestAutomation/pom.xml
+++ b/ui/UiTestAutomation/pom.xml
@@ -117,6 +117,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-hamcrest</artifactId>
+            <version>2.32.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>4.39.0</version>
