fixed grid execution network mocking

--- a/api/PetstoreApiTest/docker-compose.yml
+++ b/api/PetstoreApiTest/docker-compose.yml
@@ -4,4 +4,4 @@ services:
     build: .
     volumes:
       - ./target/allure-results:/app/target/allure-results
-    command: /bin/sh -c "rm -rf /app/target/; mvn test"
+    command: /bin/sh -c "mvn test"
